
We reduced the scope for running spec directories, files, a single file or individual spec in TextMate to source.ruby.rspec. This allowed us to restore the standard Ruby shortcuts:

CMD-R runs all the specs in one file
CMD-SHIFT-R runs an individual spec
CMD-OPT-R runs any files or directories selected in the TextMate drawer

rspec_on_rails users - don't forget to run script/generate rspec

* Applied LH[#168] Fix describe Object, "description contains a # in it" (Patch from Martin Emde)
* Applied LH[#15] Reverse loading of ActionView::Base helper modules (Patch from Mark Van Holstyn)
* Applied LH[#149] Update contribute page to point towards lighthouse (Patch from Josh Knowles)
* Applied LH[#142] verify_rcov fails with latest rcov (Patch from Kyle Hargraves)
* Applied LH[#10] Allow stubs to yield and return values (Patch from Pat Maddox)
* Fixed LH[#139] version.rb in trunk missing svn last changed number
* Applied LH[#14] Adding support for by_at_least/by_at_most in Change matcher (Patch from Saimon Moore)
* Applied LH[#12] Fix for TM when switching to alternate file (Patch from Trevor Squires)
* Applied LH[#133] ExampleMatcher should match against before(:all) (Patch from Bob Cotton)
* Applied LH[#134] Only load spec inside spec_helper.rb (Patch from Mark Van Holstyn)
* RSpec now bails immediately if there are examples with identical names.
* Applied LH[#132]  Plain Text stories should support Given and Given: (Patch from Jarkko Laine)
* Applied LH[#16] Have SimpleMatchers expose their description for specdocs (Patch from Bryan Helmkamp)
* Stories now support --colour
* Changed the DSL modules to Example (i.e. Spec::Example instead of Spec::DSL)
* Applied [#15608] Story problem if parenthesis used in Given, When, Then or And (Patch from Sinclair Bain)
* Applied [#15659] GivenScenario fails when it is a RailsStory (Patch from Nathan Sutton)
* Fixed [#15639] rcov exclusion configuration. (Spec::Rails projects can configure rcov with spec/rcov.opts)